Fix typo; my bad

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@ title: Status updates
 <div id="home">
     {% case site.posts.size %}
     {% when 0 %}
-    <h1 id="intro">Not updates, yet!</h1>
+    <h1 id="intro">No updates, yet!</h1>
     {% when 1 %}
     {% when 2 %}
     <h1 id="intro">Recent Updates</h1>
